# LoRa_Sensor_Network

./: .gitignore  README.md  _P056_BME680withBoschLib_v02.txt  docker-compose.yml  iisnode.yml
API_Access_Test/: API_Access_Test.csproj  API_Access_Test.sln  Program.cs
Documentation/: Implementation-Template-BSc.docx  LoRa_Sensor_Network_Presentation.pptx
Endpoint Tests/: Endpoint-tests-soapui-project.xml
Examples/: Example_Webhook_Data.jsonc  MQ-2-Gas-Sensor-code.7z
Examples/MQ-2-Gas-Sensor-code/MQ-2-Gas-Sensor-code/Pico/c/: CMakeLists.txt  main.c
Examples/MQ-2-Gas-Sensor-code/MQ-2-Gas-Sensor-code/Pico/c/examples/: CMakeLists.txt  Gas_Sensor_Test.h  Gas_Sensor_test.c
Examples/MQ-2-Gas-Sensor-code/MQ-2-Gas-Sensor-code/Pico/c/lib/Config/: DEV_Config.c  DEV_Config.h
Examples/MQ-2-Gas-Sensor-code/MQ-2-Gas-Sensor-code/Pico/c/lib/Gas_Sensor/: CMakeLists.txt  Gas_Sensor.c  Gas_Sensor.h
Examples/MQ-2-Gas-Sensor-code/MQ-2-Gas-Sensor-code/Pico/c/uf2/: MQ-5-Gas-Sensor-test.uf2
LoRa_Sensor_Network_Blazor_Server_App/: .dockerignore  Dockerfile  LoRa_Sensor_Network_Blazor_Server_App.csproj  LoRa_Sensor_Network_Blazor_Server_App.sln  Program.cs  Startup.cs  _Imports.razor  appsettings.json
MQTT_Connection_Test/: MQTT_Connection_Test.csproj  MQTT_Connection_Test.sln  Program.cs  Startup.cs  _Imports.razor
MQTT_Console_Test/: MQTT_Console_Test.csproj  MQTT_Console_Test.sln  Program.cs
SQL_Queries/: SQLQuery1.sql
Sensor_Station_3MF_Files/: Arduino_Housing.3mf  Arduino_Housing_wps.3mf  Battery_Housing.3mf  Battery_Housing_wPrint_Settings.3mf  Bottom_Cover.3mf  (+7 more)
(+298 files in other folders)
